--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.22",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "15.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
     "eslint": "^9.17.0",
-    "eslint-config-next": "14.2.22",
     "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2"
   }
 }
